independ block-text and code-text.

--- a/example_game.html
+++ b/example_game.html
@@ -86,11 +86,16 @@
 										<div id="collapse11" class="panel-collapse collapse in">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="var-block">SORAMAME_BLOCK.app.speed = 1;</li>
-													<li class="var-block">SORAMAME_BLOCK.app.speed = 2;</li>
-													<li class="var-block">SORAMAME_BLOCK.app.speed = 3;</li>
-													<li class="var-block">SORAMAME_BLOCK.app.speed = 4;</li>
-													<li class="comment-block">/* comment */</li>
+													<li class="var-block">Speed = 1;
+														<span class="code-body">SORAMAME_BLOCK.app.speed = 1;</span></li>
+													<li class="var-block">Speed = 2;
+														<span class="code-body">SORAMAME_BLOCK.app.speed = 2;</span></li>
+													<li class="var-block">Speed = 3;
+														<span class="code-body">SORAMAME_BLOCK.app.speed = 3;</span></li>
+													<li class="var-block">Speed = 4;
+														<span class="code-body">SORAMAME_BLOCK.app.speed = 4;</span></li>
+													<li class="comment-block">/* comment */
+														<span class="code-body">/* comment */</span></li>
 												</ol>
 											</div>
 										</div>
@@ -107,59 +112,18 @@
 										<div id="collapse13" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="basic-block">SORAMAME_BLOCK.app.background = 'city';</li>
-													<li class="basic-block">SORAMAME_BLOCK.app.background = 'jungle';</li>
-													<li class="basic-block">SORAMAME_BLOCK.app.background = 'planet';</li>
+													<li class="basic-block">Background = 'city';
+														<span class="code-body">SORAMAME_BLOCK.app.background = 'city';</span></li>
+													<li class="basic-block">Background = 'jungle';
+														<span class="code-body">SORAMAME_BLOCK.app.background = 'jungle';</span></li>
+													<li class="basic-block">Background = 'planet';
+														<span class="code-body">SORAMAME_BLOCK.app.background = 'planet';</span></li>
 												</ol>
 											</div>
 										</div>
 									</div>
 									<!-- end panel -->
-									<!-- start panel -->
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											<h4 class="panel-title">
-												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse12">IF </a>
-											</h4>
-										</div>
-										<!-- panel-collapse -->
-										<div id="collapse12" class="panel-collapse collapse">
-											<div class="panel-body">
-												<ol class="pallet-code block connect-area">
-													<li class="if-block">if ()</li>
-													<li class="if-block">else if ()</li>
-													<li class="if-block">else</li>
-													<li class="if-block">if ()</li>
-													<li class="if-block">else if ()</li>
-													<li class="if-block">else</li>
-													<li class="if-block">if ()</li>
-													<li class="if-block">else if ()</li>
-													<li class="if-block">else</li>
-												</ol>
-											</div>
-										</div>
-									</div>
-									<!-- end panel -->
-									<!-- start panel -->
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											<h4 class="panel-title">
-												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse14">VAR </a>
-											</h4>
-										</div>
-										<!-- panel-collapse -->
-										<div id="collapse14" class="panel-collapse collapse">
-											<div class="panel-body">
-												<ol class="pallet-code block connect-area">
-													<li class="var-block item-block">item0a</li>
-												</ol>
-												<ol class="pallet-code block connect-area">
-													<li class="var-block item-block">item0b</li>
-												</ol>
-											</div>
-										</div>
-									</div>
-									<!-- end panel -->
+
 								</div>
 								<!-- panel-group -->
 							</div>
@@ -169,9 +133,12 @@
 						<!-- ---------- Main Edit Area ---------- -->
 						<div class="col-sm-6 col-sm-offset-5 col-md-6 col-md-offset-5 main">
 							<ol class="block connect-area serialize">
-								<li class="comment-block">/* Set Speed */</li>
-								<li class="var-block">SORAMAME_BLOCK.app.speed = 1;</li>
-								<li class="comment-block">/* Set Background */</li>
+								<li class="comment-block">/* Set Speed */
+									<span class="code-body">/* Set Speed */</span></li>
+								<li class="var-block">Speed = 1;
+									<span class="code-body">SORAMAME_BLOCK.app.speed = 1;</span></li>
+								<li class="comment-block">/* Set Background */
+									<span class="code-body">/* Set Background */</span></li>
 							</ol>
 						</div>
 						<!-- end of Main Edit Area-->
