add Help tab for document.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -52,6 +52,11 @@
 							</a>
 						</li>
 					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="#menu3" data-toggle="tab">Help</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav> <!-- End Static navbar -->
@@ -222,15 +227,28 @@
 					<!-- end of tab item #1 -->
 
 					<!-- tab item #2 -->
-					<div class="col-md-2"></div>
 					<div class="tab-pane fade" id="menu2">
-						<pre>
-							<code class="js"></code>
-						</pre>
+						<div class="col-md-2"></div>
+						<div class="col-md-8">
+							<pre>
+								<code class="js"></code>
+							</pre>
+						</div>
+						<div class="col-md-2"></div>
 					</div>
-					<div class="col-md-"></div>
+					<!-- end of tab item #2 -->
+
+					<!-- tab item #3 -->
+					<div class="tab-pane fade" id="menu3">
+						<div class="col-md-2"></div>
+						<div class="col-md-8">
+							<h4>Help - SoraMame.block</h4>
+						</div>
+						<div class="col-md-2"></div>
+					</div>
+					<!-- end of tab item #3 -->
+					
 				</div>
-				<!-- end of tab item #2 -->
 				<!-- end of tab body-->
 			</div>
 			<!-- end of row -->
