--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -243,6 +243,12 @@
 						<div class="col-md-2"></div>
 						<div class="col-md-8">
 							<h4>Help - SoraMame.block</h4>
+							<ul>
+								<li>Move Block: Drag and drop block.</li>
+								<li>Edit expression: Double-click expression </li>
+								<li>Clear trash: Double-click trash</li>
+								<li></li>
+							</ul>
 						</div>
 						<div class="col-md-2"></div>
 					</div>
