add help document.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -242,12 +242,21 @@
 					<div class="tab-pane fade" id="menu3">
 						<div class="col-md-2"></div>
 						<div class="col-md-8">
-							<h4>Help - SoraMame.block</h4>
+							<h4>Help - SoraMame.Block</h4>
+							<p>SoraMame.Block is block type code editor for tiny script.</p>
+							<h5>How to use</h5>
+							<p>Block Tab</p>
+								<ul>
+									<li>Move Block: Drag and drop block.</li>
+									<li>Edit Expression: Double-click expression </li>
+									<li>Clear Trash Can: Double-click trash</li>
+								</ul>
+							<p>Code Tab: View code.</p>
+							<p>Run Tab: Execute code.</p>
+							<h5>Reference</h5>
 							<ul>
-								<li>Move Block: Drag and drop block.</li>
-								<li>Edit expression: Double-click expression </li>
-								<li>Clear trash: Double-click trash</li>
-								<li></li>
+								<li><a href="https://github.com/ycatch/SoraMame.Block">Github</a></li>
+								<li><a href="http://www.catch.jp/wiki/index.php?SoraMame.Block">Japanese Documents - 日本語ドキュメント</a></li>
 							</ul>
 						</div>
 						<div class="col-md-2"></div>
