--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -54,7 +54,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="#menu3" data-toggle="tab">Help</a>
+							<a href="#helpModalDialog" data-toggle="modal">Help</a>
 						</li>
 					</ul>
 				</div>
@@ -237,31 +237,6 @@
 						<div class="col-md-2"></div>
 					</div>
 					<!-- end of tab item #2 -->
-
-					<!-- tab item #3 -->
-					<div class="tab-pane fade" id="menu3">
-						<div class="col-md-2"></div>
-						<div class="col-md-8">
-							<h4>Help - SoraMame.Block</h4>
-							<p>SoraMame.Block is block type code editor for tiny script.</p>
-							<h5>How to use</h5>
-							<p>Block Tab</p>
-								<ul>
-									<li>Move Block: Drag and drop block.</li>
-									<li>Edit Expression: Double-click expression </li>
-									<li>Clear Trash Can: Double-click trash</li>
-								</ul>
-							<p>Code Tab: View code.</p>
-							<p>Run Tab: Execute code.</p>
-							<h5>Reference</h5>
-							<ul>
-								<li><a href="https://github.com/ycatch/SoraMame.Block">Github</a></li>
-								<li><a href="http://www.catch.jp/wiki/index.php?SoraMame.Block">Japanese Documents - 日本語ドキュメント</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2"></div>
-					</div>
-					<!-- end of tab item #3 -->
 					
 				</div>
 				<!-- end of tab body-->
@@ -282,6 +257,38 @@
 						<div class="modal-footer">
 							<button type="button" class="btn btn-primary" onclick="SORAMAME_BLOCK.clodeExpDialog()">OK</button>
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /.modal -->
+			<!-- Help dialog by Bootstrap3 Modals -->
+			<div id="helpModalDialog" class="modal fade">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">Help - SoraMame.Block</h4>
+						</div>
+						<div class="modal-body">
+							<p>SoraMame.Block is block-type code editor for tiny script.</p>
+							<h5>How to use</h5>
+							<p>Block Tab</p>
+								<ul>
+									<li>Move Block: Drag and Drop block.</li>
+									<li>Edit Expression: Double-Click expression </li>
+									<li>Clear Trash-Can: Double-Click trash</li>
+								</ul>
+							<p>Code Tab: View code.</p>
+							<p>Run Tab: Execute code.</p>
+							<h5>Reference</h5>
+							<ul>
+								<li><a href="https://github.com/ycatch/SoraMame.Block" target="_blank">Github</a></li>
+								<li><a href="http://www.catch.jp/wiki/index.php?SoraMame.Block" target="_blank">Japanese Documents - 日本語ドキュメント</a></li>
+							</ul>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 						</div>
 					</div>
 				</div>
