adjust layout and operations.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -48,7 +48,7 @@
 						</li>
 						<li>
 							<a href="javascript:void(0)" onclick="SORAMAME_BLOCK.execCodeBlock(); return false;">
-								<i class="glyphicon glyphicon-play"></i> Run
+								<span class="glyphicon glyphicon-play"></span> Run
 							</a>
 						</li>
 					</ul>
@@ -276,7 +276,7 @@
 							<p>Block Tab</p>
 								<ul>
 									<li>Move Block: Drag and Drop block.</li>
-									<li>Edit Expression: Double-Click expression </li>
+									<li>Edit Expression: Click expression </li>
 									<li>Clear Trash-Can: Double-Click trash</li>
 								</ul>
 							<p>Code Tab: View code.</p>
