--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="description" content="This is very small block-type code editor ">
 		<meta name="author" content="Yutaka Kachi">
 		<link rel="icon" href="lib/img/favicon.ico">
@@ -13,6 +13,7 @@
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
+		<link href="css/non-responsive.css" rel="stylesheet">
 		<link href="lib/css/dashboard.css" rel="stylesheet">
 		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
@@ -67,7 +68,7 @@
 					<!-- tab item #1 -->
 					<div class="tab-pane fade in active" id="menu1">
 						<!-- start sidebar -->
-						<div class="col-sm-3 col-md-3 sidebar">
+						<div class="col-xs-3 sidebar">
 							<div class="sidebar-nav" role="complementary">
 								<div class="panel-group" id="accordion">
 									<!-- start panel -->
@@ -163,7 +164,7 @@
 						<!-- end of side-bar -->
 
 						<!-- Main Edit Area -->
-						<div class="col-sm-7 col-sm-offset-3 col-md-8 col-md-offset-2 main">
+						<div class="col-xs-8 col-xs-offset-2 main">
 							<ol class="block connect-area serialize">
 								<li class="var-block">var <span class="exp-body">msg = "Hello:" + name + "\n"</span>;
 									<span class="code-body">var <span class="code-exp">msg = "Hello:" + name + "\n"</span>;</span></li>
@@ -215,7 +216,7 @@
 						</div>
 						<!-- end of Main Edit Area-->
 						<!-- trash area-->
-						<div class="col-sm-2 col-md-2">
+						<div class="col-xs-2">
 							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
 								<p></p>
 								<a class="trash" href="#" ondblclick="SORAMAME_BLOCK.clearTrash()"></a>
