I can use this without network.

--- a/example_game.html
+++ b/example_game.html
@@ -16,7 +16,7 @@
 		<link href="lib/css/dashboard.css" rel="stylesheet">
 		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css"/ rel="stylesheet">
+		<link href="lib/css/highlight_default.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -198,7 +198,7 @@
 
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="lib/js/vendor/jquery.min.js"></script>
 		<script src="lib/js/bootstrap.min.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="lib/js/ie10-viewport-bug-workaround.js"></script>
@@ -206,6 +206,6 @@
 		<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
 		<script type="text/javascript" src="lib/js/soramame.block.js"></script>
 		<script type="text/javascript" src="lib/js/beautify.js"></script>
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
+		<script type="text/javascript" src="lib/js/highlight.pack.js"></script>
 	</body>
 </html>
