--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="description" content="This is very small block-type code editor ">
 		<meta name="author" content="Yutaka Kachi">
 		<link rel="icon" href="lib/img/favicon.ico">
@@ -19,7 +19,6 @@
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
 		<link href="lib/css/highlight_default.css" rel="stylesheet">
 
- -->
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -83,8 +82,8 @@
 										<div id="collapse11" class="panel-collapse collapse in">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="basic-block">alert(<span class="exp-body">write exp</span>);
-														<span class="code-body">alert(<span class="code-exp"></span>);</span></li>
+													<li class="basic-block">alert(<span class="exp-body">"write exp"</span>);
+														<span class="code-body">alert(<span class="code-exp">"write exp"</span>);</span></li>
 													<li class="basic-block">prompt(<span class="exp-body"></span>);
 														<span class="code-body">prompt(<span class="code-exp"></span>);</span></li>
 													<li class="comment-block">confirm(<span class="exp-body"></span>);
@@ -167,7 +166,7 @@
 						<!-- end of side-bar -->
 
 						<!-- Main Edit Area -->
-						<div class="col-xs-8 col-xs-offset-2 main">
+						<div class="col-xs-7 col-xs-offset-3 main">
 							<ol class="block connect-area serialize">
 								<li class="var-block">var <span class="exp-body">msg = "Hello:" + name + "\n"</span>;
 									<span class="code-body">var <span class="code-exp">msg = "Hello:" + name + "\n"</span>;</span></li>
@@ -232,13 +231,13 @@
 
 					<!-- tab item #2 -->
 					<div class="tab-pane fade" id="menu2">
-						<div class="col-md-2"></div>
-						<div class="col-md-8">
+						<div class="col-xs-2"></div>
+						<div class="col-xs-8">
 							<pre>
 								<code class="js"></code>
 							</pre>
 						</div>
-						<div class="col-md-2"></div>
+						<div class="col-xs-2"></div>
 					</div>
 					<!-- end of tab item #2 -->
 					
